@@ -70,6 +70,12 @@ if __name__=='pymol.controlling':
       'pk1'  : 27 ,
       'mova' : 28 ,
       'menu' : 29 ,
+
+      'sele' : 30 ,
+      '+/-'  : 31 ,
+      '+box' : 32 ,
+      '-box' : 33 ,
+      
       }
    but_act_sc = Shortcut(but_act_code.keys())
 
@@ -110,13 +116,13 @@ if __name__=='pymol.controlling':
       'three_button_viewing' : [ ('l','none','rota'),
                                  ('m','none','move'),
                                  ('r','none','movz'),
-                                 ('l','shft','+lbx'),
-                                 ('m','shft','-lbx'),
+                                 ('l','shft','+Box'),
+                                 ('m','shft','-Box'),
                                  ('r','shft','clip'),                 
-                                 ('l','ctrl','+lb'),
+                                 ('l','ctrl','+/-'),
                                  ('m','ctrl','pkat'),
                                  ('r','ctrl','pk1'),                 
-                                 ('l','ctsh','lb'),
+                                 ('l','ctsh','Sele'),
                                  ('m','ctsh','cent'),
                                  ('r','ctsh','menu'),
                                  ('w','none','slab'),
@@ -158,7 +164,7 @@ if __name__=='pymol.controlling':
                                ('l','ctrl','move'),
                                ('m','ctrl','none'),
                                ('r','ctrl','pkat'),                 
-                               ('l','ctsh','lb'),
+                               ('l','ctsh','sele'),
                                ('m','ctsh','none'),
                                ('r','ctsh','cent'),
                                ('w','none','none'),
@@ -173,13 +179,13 @@ if __name__=='pymol.controlling':
       'two_button_selecting' : [ ('l','none','rota'),
                                  ('m','none','none'),
                                  ('r','none','movz'),
-                                 ('l','shft','+lbx'),
+                                 ('l','shft','+Box'),
                                  ('m','shft','none'),
-                                 ('r','shft','-lbx'),                 
-                                 ('l','ctrl','+lb'),
+                                 ('r','shft','-Box'),                 
+                                 ('l','ctrl','+/-'),
                                  ('m','ctrl','none'),
                                  ('r','ctrl','pkat'),                 
-                                 ('l','ctsh','lb'),
+                                 ('l','ctsh','sele'),
                                  ('m','ctsh','none'),
                                  ('r','ctsh','cent'),
                                  ('w','none','none'),
